--- a/_config.yml
+++ b/_config.yml
@@ -76,5 +76,7 @@ theme: jekyll-theme-slate
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
-deploy:
-  type:
+deploy: 
+type: git
+repository: https://github.com/zhoulucong0611/danwang.github.io.git
+branch: master
